<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/peoples_Guideline_half_vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/peoples_CardView_nino"
            android:layout_width="0dp"
            android:foreground="?selectableItemBackground"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/peoples_Guideline_half_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/peoples_ImageView_nino_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/a11y_nino_photo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/nino"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/peoples_TextView_nino_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:text="@string/nino_name"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@id/peoples_Barrier_skills"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/peoples_ImageView_nino_photo"
                    />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/peoples_Barrier_skills"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:barrierDirection="top"
                    app:constraint_referenced_ids="peoples_TextView_nino_mentor,peoples_TextView_nino_kotlin,peoples_TextView_nino_java"
                    />

                <TextView
                    android:id="@+id/peoples_TextView_nino_mentor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:background="@drawable/badge_openclassrooms"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:text="@string/mentor"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/peoples_TextView_nino_kotlin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/peoples_TextView_nino_name"
                    />

                <TextView
                    android:id="@+id/peoples_TextView_nino_kotlin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:background="@drawable/badge_kotlin"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:text="@string/kotlin"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/peoples_TextView_nino_java"
                    app:layout_constraintStart_toEndOf="@id/peoples_TextView_nino_mentor"
                    app:layout_constraintTop_toBottomOf="@id/peoples_TextView_nino_name"
                    />

                <TextView
                    android:id="@+id/peoples_TextView_nino_java"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:background="@drawable/badge_java"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:text="@string/java"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/peoples_TextView_nino_kotlin"
                    app:layout_constraintTop_toBottomOf="@id/peoples_TextView_nino_name"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>